--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [project]
-name = "audio-general-ComfyUI"
-description = "General audio nodes.  Mix, Bass/Treble, Concatenate, Pitch, Add/remove silence, Speed"
+name = "comfyui-audio-pitch"
+description = "Controls the pitch of the audio"
 version = "1.0.0"
-license = {text = "MIT License"}
+license = {file = "LICENSE"}
 
 [project.urls]
-Repository = "https://github.com/niknah/audio-general-ComfyUI"
-#  Used by Comfy Registry https://comfyregistry.org
+Repository = "https://github.com/Takenoko3333/ComfyUI-Audio-Pitch"
 
 [tool.comfy]
-PublisherId = "niknah"
-DisplayName = "Audio General"
+PublisherId = "Takenoko3333"
+DisplayName = "ComfyUI-Audio-Pitch"
 Icon = ""
